OO-5170: flag some recordings as permanent to not delete them